@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2011-12-20 (SVN):
+    * screen.c, gl_screen.c (UpdateInfoMessage): Changed newmessage to be
+      const. Replaced strcat by q_strlcpy to be on the safe side.
+
+2011-12-20 (SVN):
     * screen.c, gl_screen.c: Whitespace tidy up. Removed extra parentheses
       from a few places where they aren't necessary at all.
 
